--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#bfdcae</color>
+    <color name="yellow">#ffcc29</color>
+    <color name="orange">#f58634</color>
+    <color name="medium_green">#81b214</color>
+    <color name="third_green">#2c4250</color>
+    <color name="green_components">#206a5d</color>
+    <color name="offwhite_background">#f1f1e8</color>
 </resources>
