--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
 
     <TextView
         android:id="@+id/titulo"
-        android:text="TELA DE LOGUIN"
+        android:text="TELA DE LOGIN"
         android:textSize="40dp"
         android:gravity="center"
         android:background="@color/teal_200"
