--- a/app/src/main/res/layout/activity_segunda_tela.xml
+++ b/app/src/main/res/layout/activity_segunda_tela.xml
@@ -43,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:backgroundTint="@color/light_green"
         android:src="@drawable/ic_baseline_add_24"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
