--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#bfdcae</color>
     <color name="yellow">#ffcc29</color>
+    <color name="dark_grey">#3C3A3A</color>
     <color name="orange">#f58634</color>
     <color name="medium_green">#81b214</color>
     <color name="third_green">#2c4250</color>
