--- a/app/src/main/res/layout/activity_segunda_tela.xml
+++ b/app/src/main/res/layout/activity_segunda_tela.xml
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.373" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdd"
+        android:id="@+id/botaoGastosAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -95,7 +95,7 @@
         app:layout_constraintVertical_bias="0.121" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAdd2"
+        android:id="@+id/botaoSaldoAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -142,6 +142,7 @@
         app:layout_constraintVertical_bias="0.976" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/gastos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="27dp"
