--- a/app/src/main/res/layout/item_da_lista.xml
+++ b/app/src/main/res/layout/item_da_lista.xml
@@ -26,7 +26,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/textView_titulo"
+                    android:id="@+id/textViewValor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingStart="16dp"
