teclado numero decimal

--- a/app/src/main/res/layout/activity_segunda_tela.xml
+++ b/app/src/main/res/layout/activity_segunda_tela.xml
@@ -115,7 +115,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/dark_grey"
         android:hint="Digite um valor"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textColor="@color/third_green"
         android:textColorHint="@color/dark_grey"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/dark_grey"
         android:hint="Digite um valor"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:textColor="@color/third_green"
         android:textColorHint="@color/dark_grey"
         app:layout_constraintBottom_toBottomOf="parent"
