Update do Layout

--- a/app/src/main/res/layout/activity_segunda_tela.xml
+++ b/app/src/main/res/layout/activity_segunda_tela.xml
@@ -51,6 +51,7 @@
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     <TextView
+        android:id="@+id/legenda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="nos últimos dias..."
@@ -143,6 +144,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gastos"
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/novo_gasto"
