--- a/app/src/main/res/layout/activity_segunda_tela.xml
+++ b/app/src/main/res/layout/activity_segunda_tela.xml
@@ -46,6 +46,7 @@
         android:backgroundTint="@color/light_green"
         android:src="@drawable/ic_baseline_add_24"
         app:fabSize="normal"
+        android:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
@@ -103,6 +104,7 @@
         android:backgroundTint="@color/light_green"
         android:src="@drawable/ic_baseline_add_24"
         app:fabSize="normal"
+        android:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
