--- a/app/src/main/res/layout/activity_segunda_tela.xml
+++ b/app/src/main/res/layout/activity_segunda_tela.xml
@@ -113,7 +113,7 @@
         app:layout_constraintVertical_bias="0.214" />
 
     <EditText
-        android:id="@+id/novo_saldo"
+        android:id="@+id/entrada_valor"
         android:layout_width="291dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/dark_grey"
@@ -157,6 +157,7 @@
         app:layout_constraintTop_toBottomOf="@+id/soma_gastos" />
 
     <ImageButton
+        android:id="@+id/cofrinho"
         android:layout_width="123dp"
         android:layout_height="124dp"
         android:backgroundTint="@color/offwhite_background"
@@ -191,7 +192,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.832"
         app:layout_constraintStart_toEndOf="@+id/text_view_gastos"
-        app:layout_constraintTop_toBottomOf="@+id/novo_saldo"
+        app:layout_constraintTop_toBottomOf="@+id/entrada_valor"
         app:layout_constraintVertical_bias="0.469" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
